# cps376-lecture-code

01/: gpu.py  multi_core.py  single_core.c  single_core.py
02/: CMakeLists.txt
02-python-threading/: buggy_sum.py  parallel_prefix_sum.py  parallel_sum.py  parallel_sum_sol.py  process_demo_1.py  process_demo_2.py  serial_sum.py  shared_memory.py  thread_demo_1.py  thread_process_diff.py
02/src/: mutex_example.cpp  mutex_impl.cpp  race.cpp  sum_parallel.cpp
03/: CMakeLists.txt
03/src/: avx.cpp  branching.cpp
04-cpp_procs/: CMakeLists.txt  threads.cpp
04-cpp_procs/src/: threads.cpp
05-data-races/: CMakeLists.txt  README.md
05-data-races/src/: deadlock.cpp  mutex_example.cpp  race.cpp  sum_parallel.cpp  sum_parallel_sol.cpp  sum_serial.cpp
06/: CMakeLists.txt
06-cache/: CMakeLists.txt  README.md
06-cache/src/: alloc_comp.cpp  cache_miss.cpp  game_example.cpp  iter_comp.cpp
06/src/: alloc_comp.cpp  cache_miss.cpp  iter_comp.cpp
07/: CMakeLists.txt
07-avx/: CMakeLists.txt  README.md
07-avx/src/: avx_example.cpp  sum_avx.cpp
07/src/: hello.cpp  matmul.cpp
08/: CMakeLists.txt
08-multithreading-practice/: CMakeLists.txt  README.md
08-multithreading-practice/include/: random_string.h  timer.h
08-multithreading-practice/src/: dining.cpp  find_string.cpp  queue_example.cpp  threaded_find_string.cpp
08-multithreading-practice/src/solutions/: dining.cpp  find_string.cpp  threaded_find_string.cpp
08/src/: downsample.cpp  mc_area.cpp  string_search.cpp  upsample.cpp
09/: CMakeLists.txt
09-OpenMP/: CMakeLists.txt
09-OpenMP/src/: critical_openmp.cpp  downsample.cpp  hello_openmp.cpp  monte_carlo.cpp  sum_openmp.cpp  sum_threads.cpp
09-OpenMP/src/solutions/: downsample.cpp  monte_carlo.cpp
09/src/: lock_free_stack.cpp  spin_lock.cpp
10-KNN/: CMakeLists.txt  README.md
10-KNN/include/: image.h  mnist.h
10-KNN/src/: data.py  knn_parallel.cpp  knn_serial.cpp  mnist.cpp  mnist_test.cpp
10-KNN/src/solutions/: knn_serial.cpp
11/src/: hello.cu
13-CUDA/: CMakeLists.txt
13-CUDA/src/: allocation.cu  dims.cu  elementwise_add.cu  hello.cu  matmul.cu  substring_finder.cu  vector_add.cu
13-CUDA/src/solutions/: elementwise_add.cu  substring_finder.cu
14-CUDA-2/: CMakeLists.txt
14-CUDA-2/src/: dims.cu  matmul.cu  tiled_matmul.cu
14-CUDA-2/src/solutions/: dims.cu
15/: CMakeLists.txt
15/src/: rand.cu
19-MPI/: CMakeLists.txt
19-MPI/src/: chain.cpp  hello_mpi.cpp  send_recv.cpp  sum_range.cpp
20-DistKeyValue/: CMakeLists.txt
20-DistKeyValue/src/: bcast.cpp  kv_store.cpp
omp/src/: hello.cpp  matmul.cpp  reduction.cpp
